Resolves tdf#138722 - Apply last used color for uno:BackgroundColor

Change-Id: Ibf1d40ac9f1be78ad768166a50446e88a8586c1d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195771
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
(cherry picked from commit 067e78a01ce9a9f4e8056108c640984a3c9dbc33)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/195813